<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        style="@style/textToWrite"
        android:layout_above="@+id/editText"
        android:layout_alignParentStart="true"
        android:text="@string/word_one" />

    <TextView
        android:id="@+id/textView2"
        style="@style/nextTextToWrite"
        android:layout_above="@+id/editText"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/textView1"
        android:text="@string/word_two" />

    <TextView
        android:id="@+id/textView3"
        style="@style/nextNextTextToWrite"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginStart="13dp"
        android:layout_toEndOf="@+id/textView2"
        android:text="@string/word_three" />

    <TextView
        android:id="@+id/yourWPM"
        style="@style/wpmStyle"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/wpm_text" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:onClick="startButtonPressed"
        android:text="@string/start_button"
        android:visibility="visible" />

    <EditText
        android:id="@+id/editText"
        style="@style/textToWrite"
        android:focusedByDefault="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/startButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:hint="@string/editText_hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/timerText"
        style="@style/wpmStyle"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:text="@string/timer_text" />

    <TextView
        android:id="@+id/highScore"
        style="@style/wpmStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/hiscore_text" />

</RelativeLayout>
